src/test/deca/context/valid/oracle/type_int.deca
{
    int a;
    int i = 0;
}