src/test/deca/context/invalid/oracle/instance_of_with_wrong_type.deca
{
    bool x;
    x = 3 instanceof identifier;
}